--- a/Enigma_Machine_16701080_MonayamReshad.ipynb
+++ b/Enigma_Machine_16701080_MonayamReshad.ipynb
@@ -30,10 +30,6 @@
         "  rotor2[:0] = \"hqzgpjtmoblncifdyawveusrkx\"\n",
         "  rotor3[:0] = \"uqntlszfmrehdpxkibvygjcwoa\"\n",
         "\n",
-        "  alphabets.clear()\n",
-        "  rotors.clear()\n",
-        "\n",
-        "\n",
         "  reflector = {\n",
         "      'a': 'y', 'b': 'r', 'c': 'u', 'd': 'h', 'e': 'q', 'f': 's','g': 'l', \n",
         "      'i': 'p', 'j': 'x', 'k': 'n', 'm': 'o', 't': 'z','v': 'w', 'y': 'a', \n",
@@ -43,8 +39,8 @@
         "  \n",
         "  return alphabets, rotor1, rotor2, rotor3, reflector\n",
         "\n",
-        "def getSettings():\n",
-        "  settings = input(\"Insert 3 lowercase alphabets without any space: \")\n",
+        "def getSettingsFromInput():\n",
+        "  settings = input(\"Insert 3 lowercase alphabets as the rotor settings(without any space):\\n\")\n",
         "  while len(settings) != 3 and settings.tolower() == False:\n",
         "    settings = input(\"Error! Please follow the instruction and try again: \")\n",
         "\n",
@@ -58,12 +54,12 @@
         "  return index1, index2, index3\n",
         "\n",
         "def setRotorInConfiguredPosition(rotor1, rotor2, rotor3, index1 = 0, index2 = 0, index3 = 0):\n",
-        "  rotor1 = rotor1[index1:] + rotor1[index1]\n",
-        "  rotor2 = rotor2[index2:] + rotor2[index2]\n",
-        "  rotor3 = rotor3[index3:] + rotor3[index3]\n",
+        "  rotor1 = rotor1[index1:] + rotor1[:index1]\n",
+        "  rotor2 = rotor2[index2:] + rotor2[:index2]\n",
+        "  rotor3 = rotor3[index3:] + rotor3[:index3]\n",
         "  \n",
         "\n",
-        "defMessage(message, alphabets, rotor1, rotor2, rotor3, reflector):\n",
+        "def getMessage(message, alphabets, rotor1, rotor2, rotor3, reflector):\n",
         "  index1 = 0\n",
         "  index2 = 0\n",
         "  index3 = 0\n",
@@ -79,6 +75,12 @@
         "    newch1 = rotor2[alphabets.index(newch1)]\n",
         "    newch1 = rotor3[alphabets.index(newch1)]\n",
         "\n",
+        "    newch2 = reflector[newch1]\n",
+        "    newch2 = alphabets[rotor3.index(newch2)]\n",
+        "    newch2 = alphabets[rotor2.index(newch2)]\n",
+        "    newch2 = alphabets[rotor1.index(newch2)]\n",
+        "\n",
+        "\n",
         "    out_message += newch2\n",
         "\n",
         "    index1 = (index1 + 1) % 26\n",
@@ -92,24 +94,52 @@
         "        index3 = (index3 + 1) % 26\n",
         "        rotor3 = rotor3[1:] + rotor3[:1]\n",
         "    \n",
-        "    return out_message\n",
-        "\n",
-        "        \n",
-        " \n",
+        "  return out_message\n",
         "\n",
         "\n",
+        "def main():\n",
+        "  alphabets, rotor1, rotor2, rotor3, reflector = init()\n",
         "\n",
+        "  settings = getSettingsFromInput()\n",
         "\n",
+        "  index1, index2, index3 = getIndexOfRotors(settings, rotor1, rotor2, rotor3)\n",
         "\n",
-        "    \n",
+        "  setRotorInConfiguredPosition(rotor1, rotor2, rotor3, index1, index2, index3)\n",
         "\n",
+        "  message = input(\"Enter your message (lower case letters only):\\n\")\n",
+        "  # message = message.lower()\n",
         "\n",
+        "  changed_message = getMessage(message, alphabets, rotor1, rotor2, rotor3, reflector)\n",
         "\n",
+        "  print(\"The changed message: \", changed_message)\n",
         "\n",
-        "  "
+        "  setRotorInConfiguredPosition(rotor1, rotor2, rotor3, index1, index2, index3)\n",
+        "\n",
+        "  original_message = getMessage(changed_message, alphabets, rotor1, rotor2, rotor3, reflector)\n",
+        "\n",
+        "  print(\"The original message: \", original_message)\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  main()\n",
+        "\n"
       ],
-      "execution_count": 1,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The changed message:  z xtjv nuh\nThe original message:  i love you\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ]
 }
